--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body{
@@ -22,7 +23,7 @@ body{
 }
 
 
-/*------ Navbar-inicio------ */
+/* ------ Navbar-inicio------ */
 
 .navbar{
     display: block;
@@ -63,7 +64,7 @@ body{
 .nav-link:hover{
     color: var(--light);
 }
-/*------ NAVBAR-FIM------ */
+/* ------ NAVBAR-FIM------ */
 
 /* ---- HOME-INICIO ---- */
 .home{
@@ -111,7 +112,24 @@ body{
     background: var(--dark);
     border: 2px solid var(--dark);
 }
-/*------ HOME-FIM------ */
+/* ------ HOME-FIM------ */
+
+/* ------ FOOTER-INICIO ------ */
+footer {
+    padding: 60px;
+    color: var(--black);
+    background-color: var(--light);
+}
+
+footer > h3 {
+    padding: 10px 10px 10px 0px;
+    font-size: 1.5em;
+}
+
+footer > img {
+    margin-top: 5px;
+}
+/* ------ FOOTER-FIM ------ */
 
 .mobile-menu-icon{
     display: none;
@@ -121,9 +139,9 @@ body{
     display: none;
 }
 
-/*------ RESPONSIVO-MOBILE----- */
+/* ------ RESPONSIVO-MOBILE----- */
 @media screen and (max-width: 800px) {
-/*------ NAVBAR-MENU-INICIO------ */
+/* ------ NAVBAR-MENU-INICIO------ */
     .nav-item{
         display: none;
     }
@@ -204,10 +222,10 @@ body{
         top: 7px;
     }
 
-/*------ NAVBAR-MENU-FIM------ */
+/* ------ NAVBAR-MENU-FIM------ */
 
 
-/*------ HOME-INICIO------ */
+/* ------ HOME-INICIO------ */
     .home .home-content .text-1{
         text-align: center;
         font-size: 60px;
@@ -225,11 +243,11 @@ body{
     .open{
         display: block;
     }
-/*------ HOME-FIM------ */
+/* ------ HOME-FIM------ */
 }
 
 @media screen and (max-width: 500px){
-/*------ HOME-INICIO------ */
+/* ------ HOME-INICIO------ */
     .home .home-content .text-1{
         text-align: center;
         font-size: 50px;
@@ -243,11 +261,11 @@ body{
     .home .home-content a{
         margin-left: 100px;
     }
-/*------ HOME-FIM------ */
+/* ------ HOME-FIM------ */
 }
 
 @media screen and (max-width: 400px){
-/*------ HOME-INICIO------ */
+/* ------ HOME-INICIO------ */
     .home .home-content .text-1{
         text-align: center;
         font-size: 50px;
@@ -270,11 +288,11 @@ body{
         width: 100%;
         height: 700px;
     }
-/*------ HOME-FIM------ */
+/* ------ HOME-FIM------ */
 }
 
 @media screen and (max-width: 350px){
-/*------ HOME-INICIO------ */
+/* ------ HOME-INICIO------ */
     .home .home-content .text-1{
         text-align: center;
         font-size: 50px;
@@ -288,11 +306,11 @@ body{
     .home .home-content a{
         margin-left: 75px;
     }
-/*------ HOME-FIM------ */
+/* ------ HOME-FIM------ */
 }
 
 @media screen and (max-width: 330px){
-/*------ NAVBAR-MENU-INICIO------ */
+/* ------ NAVBAR-MENU-INICIO------ */
     .logo{
         width: 170px;
     }
@@ -318,9 +336,9 @@ body{
         visibility: hidden;
         overflow-y: hidden;
     }
-/*------ NAVBAR-MENU-FIM------ */
+/* ------ NAVBAR-MENU-FIM------ */
 
-/*------ HOME-INICIO------ */
+/* ------ HOME-INICIO------ */
     .home{
         display: flex;
         color: #FFFFFF;
@@ -343,5 +361,5 @@ body{
     .home .home-content a{
         margin-left: 35px;
     }
-/*------ HOME-FIM------ */
+/* ------ HOME-FIM------ */
 }
