--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
 .home{
     display: flex;
     color: #FFFFFF;
-    background: url(./imagens/homem-caucasiano-trabalhando-disparar_53876-30174.webp) no-repeat center; 
+    background: url(imagens/Imgem_homem_digitando.png) no-repeat center; 
     background-size: cover;
     width: 100%;
     height: 800px;
@@ -283,7 +283,7 @@ footer > img {
     .home{
         display: flex;
         color: #FFFFFF;
-        background: url(./imagens/homem-caucasiano-trabalhando-disparar_53876-30174.webp) no-repeat center; 
+        background: url(imagens/Imgem_homem_digitando.png) no-repeat center; 
         background-size: cover;
         width: 100%;
         height: 700px;
